prevent mouse follower from overflowing

--- a/fancy-effects/css/style.css
+++ b/fancy-effects/css/style.css
@@ -6,7 +6,6 @@
 html, body, main {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
 }
 
 html {
@@ -96,11 +95,11 @@ footer.title-section {
 @keyframes rotate {
     from {
         filter: hue-rotate(0deg);
-        scale: 2 1;
+        scale: 1.7 1;
     }
     to {
         filter: hue-rotate(100deg);
-        scale: 1 2;
+        scale: 1 1.7;
         rotate: 10deg;
     }
 
